--- a/apps/server/.env.template
+++ b/apps/server/.env.template
@@ -1,75 +1,61 @@
-DOMAIN=server.fritz.box
+DOMAIN=justin.konratts.de
 
 AUTH_BASE=/auth
-AUTH_CONTAINER=auth
 AUTH_PASSWORD=pass
 AUTH_PORT=8080
 AUTH_USER=codesdowork
 AUTH_REALM=server
 
 BACKUP_BASE=/backups
-BACKUP_SERVICE_CONTAINER=backup-service
 BACKUP_SERVICE_PORT=5555
 BACKUP_PC_PATH=D:/Documents
 
-CACHE_CONTAINER=cache
 CACHE_PORT=6379
 
 CERTS_DIR=./certs
 
-DASHBOARD_CONTAINER=dashboard
 DASHBOARD_PORT=80
 
-DB_CONTAINER=db
 DB_DEFAULT_DB_NAME=postgres
 DB_PASSWORD=pass
 DB_USER=postgres
 
-DOCKER_REGISTRY_CONTAINER=docker-registry
 DOCKER_REGISTRY_HOST=${DOMAIN}
 DOCKER_REGISTRY_PORT=5000
 
 DOCUMENTATION_BASE=/docs
-DOCUMENTATION_CONTAINER=documentation
 DOCUMENTATION_PORT=80
 
 GITLAB_BASE=/gitlab
-GITLAB_CONTAINER=gitlab
 GITLAB_PORT=80
 GITLAB_AUTH_CLIENT_ID=gitlab
 GITLAB_AUTH_CLIENT_SECRET=secret
 
 MUSIC_BASE=/music
-MUSIC_CONTAINER=music
 MUSIC_PORT=4533
 MUSIC_SUBNET=172.18.0.0/16
 MUSIC_GATEWAY=172.18.0.1
 MUSIC_VOLUME=~/music
 
 MUSIC_DOWNLOADER_BASE=/music-downloader
-MUSIC_DOWNLOADER_CONTAINER=music-downloader
 MUSIC_DOWNLOADER_PORT=4534
 
-NGINX_CONTAINER=nginx
 NGINX_AUTH_USERNAME_HEADER=X-Auth-Username
 NGINX_MUSIC_IP=172.18.0.4
 NGINX_AUTH_CLIENT_ID=nginx
 NGINX_AUTH_CLIENT_SECRET=secret
 
 PORTAINER_BASE=/portainer
-PORTAINER_CONTAINER=portainer
 PORTAINER_PORT=9000
 
 RENOVATE_TOKEN=token
 
 SCOREBOARD_BASE=/scoreboard
-SCOREBOARD_CONTAINER=scoreboard
 SCOREBOARD_PORT=4500
 SCOREBOARD_AUTH_CLIENT_ID=scoreboard
 SCOREBOARD_AUTH_CLIENT_SECRET=secret
 
 SONARQUBE_BASE=/sonar
-SONARQUBE_CONTAINER=sonarqube
 SONARQUBE_PORT=9000
 
 SSH_BASE=/ssh
