--- a/apps/server/scoreboard/.env
+++ b/apps/server/scoreboard/.env
@@ -1,15 +1,15 @@
 # auth
 AUTH_CLIENT_ID=scoreboard
 AUTH_CLIENT_SECRET=secret
-AUTH_ISSUER=https://server.fritz.box/auth/realms/server
+AUTH_ISSUER=https://justin.konratts.de/auth/realms/server
 
 #because self signed cert
 NODE_TLS_REJECT_UNAUTHORIZED=0
 
 # next
-NEXTAUTH_URL=https://server.fritz.box/scoreboard/api/auth
+NEXTAUTH_URL=https://justin.konratts.de/scoreboard/api/auth
 NEXTAUTH_SECRET=secret
-NEXT_PUBLIC_BASE_URL=https://server.fritz.box/scoreboard
+NEXT_PUBLIC_BASE_URL=https://justin.konratts.de/scoreboard
 NEXT_PUBLIC_BASE_PATH=/scoreboard
 
 # db
