--- a/apps/server/nginx/conf/default.conf
+++ b/apps/server/nginx/conf/default.conf
@@ -3,50 +3,33 @@ variables_hash_bucket_size 128;
 
 server {
     set_by_lua_block $domain { return os.getenv("DOMAIN") }
-    set_by_lua_block $tunnel_domain { return os.getenv("TUNNEL_DOMAIN") }
 
 	listen 80;
 	listen [::]:80;
-	server_name $domain $tunnel_domain;
     return 301 https://$host$request_uri;
-}
-
-map $http_host $host_or_tunnel {
-    default $http_host;
-    $nginx_container $tunnel_domain;
 }
 
 server {
     set_by_lua_block $domain { return os.getenv("DOMAIN") }
-    set_by_lua_block $tunnel_domain { return os.getenv("TUNNEL_DOMAIN") }
-
-    set_by_lua_block $nginx_container { return os.getenv("NGINX_CONTAINER") }
-
-    set_by_lua_block $dashboard_container { return os.getenv("DASHBOARD_CONTAINER") }
-    set_by_lua_block $dashboard_port { return os.getenv("DASHBOARD_PORT") }
 
     set_by_lua_block $auth_base { return os.getenv("AUTH_BASE") }
-    set_by_lua_block $auth_container { return os.getenv("AUTH_CONTAINER") }
     set_by_lua_block $auth_port { return os.getenv("AUTH_PORT") }
     set_by_lua_block $auth_realm { return os.getenv("AUTH_REALM") }
 
-    set_by_lua_block $docker_registry_container { return os.getenv("DOCKER_REGISTRY_CONTAINER") }
     set_by_lua_block $docker_registry_port { return os.getenv("DOCKER_REGISTRY_PORT") }
 
     set_by_lua_block $documentation_base { return os.getenv("DOCUMENTATION_BASE") }
-    set_by_lua_block $documentation_container { return os.getenv("DOCUMENTATION_CONTAINER") }
     set_by_lua_block $documentation_port { return os.getenv("DOCUMENTATION_PORT") }
 
     set_by_lua_block $gitlab_base { return os.getenv("GITLAB_BASE") }
-    set_by_lua_block $gitlab_container { return os.getenv("GITLAB_CONTAINER") }
     set_by_lua_block $gitlab_port { return os.getenv("GITLAB_PORT") }
 
+    set_by_lua_block $linkstack_port { return os.getenv("LINKSTACK_PORT") }
+
     set_by_lua_block $music_base { return os.getenv("MUSIC_BASE") }
-    set_by_lua_block $music_container { return os.getenv("MUSIC_CONTAINER") }
     set_by_lua_block $music_port { return os.getenv("MUSIC_PORT") }
 
     set_by_lua_block $music_downloader_base { return os.getenv("MUSIC_DOWNLOADER_BASE") }
-    set_by_lua_block $music_downloader_container { return os.getenv("MUSIC_DOWNLOADER_CONTAINER") }
     set_by_lua_block $music_downloader_port { return os.getenv("MUSIC_DOWNLOADER_PORT") }
 
     set_by_lua_block $nginx_auth_username_header { return os.getenv("NGINX_AUTH_USERNAME_HEADER") }
@@ -54,48 +37,36 @@ server {
     set_by_lua_block $nginx_auth_client_secret { return os.getenv("NGINX_AUTH_CLIENT_SECRET") }
 
     set_by_lua_block $portainer_base { return os.getenv("PORTAINER_BASE") }
-    set_by_lua_block $portainer_container { return os.getenv("PORTAINER_CONTAINER") }
     set_by_lua_block $portainer_port { return os.getenv("PORTAINER_PORT") }
 
     set_by_lua_block $scoreboard_base { return os.getenv("SCOREBOARD_BASE") }
-    set_by_lua_block $scoreboard_container { return os.getenv("SCOREBOARD_CONTAINER") }
     set_by_lua_block $scoreboard_port { return os.getenv("SCOREBOARD_PORT") }
 
     set_by_lua_block $sonarqube_base { return os.getenv("SONARQUBE_BASE") }
-    set_by_lua_block $sonarqube_container { return os.getenv("SONARQUBE_CONTAINER") }
     set_by_lua_block $sonarqube_port { return os.getenv("SONARQUBE_PORT") }
 
     set_by_lua_block $ssh_base { return os.getenv("SSH_BASE") }
     set_by_lua_block $ssh_base_dir { return os.getenv("SSH_BASE"):gsub("/", "") }
-    set_by_lua_block $ssh_container { return os.getenv("SSH_CONTAINER") }
     set_by_lua_block $ssh_port { return os.getenv("SSH_PORT") }
 
     set_by_lua_block $verdaccio_base { return os.getenv("VERDACCIO_BASE") }
-    set_by_lua_block $verdaccio_container { return os.getenv("VERDACCIO_CONTAINER") }
     set_by_lua_block $verdaccio_port { return os.getenv("VERDACCIO_PORT") }
 
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
-    server_name $domain $tunnel_domain;
+    server_name justin.konratts.de;
 
     access_by_lua_block {
-        if not ngx.re.find(ngx.var.request_uri, "^/(auth|v2|gitlab|portainer|music/rest|scoreboard|sonar|ssh|npm)") then
-            local host_or_tunnel
-            if ngx.var.http_host == ngx.var.nginx_container then
-                host_or_tunnel = ngx.var.tunnel_domain
-            else
-                host_or_tunnel = ngx.var.http_host
-            end
-
+        if ngx.re.find(ngx.var.request_uri, "^/(documentation|music|music-downloader|callback-auth)") and not ngx.re.find(ngx.var.request_uri, "^/(music/rest)") then
             local opts = {
                 redirect_uri_path = "/callback-auth",
                 accept_none_alg = true,
-                discovery = "https://" .. host_or_tunnel .. "/auth/realms/" .. ngx.var.auth_realm .. "/.well-known/openid-configuration",
+                discovery = "https://" .. ngx.var.domain .. "/auth/realms/" .. ngx.var.auth_realm .. "/.well-known/openid-configuration",
                 client_id = ngx.var.nginx_auth_client_id,
                 client_secret = ngx.var.nginx_auth_client_secret,
                 logout_path = "/logout",
-                redirect_after_logout_uri = "https://" .. host_or_tunnel .. "/auth/realms/" .. ngx.var.auth_realm .. "/protocol/openid-connect/logout",
-                session_contents = {id_token=true},
+                redirect_after_logout_uri = "https://" .. ngx.var.domain .. "/auth/realms/" .. ngx.var.auth_realm .. "/protocol/openid-connect/logout",
+                session_contents = { id_token = true },
                 ssl_verify = "no"
             }
 
@@ -111,26 +82,28 @@ server {
     }
 
     location / {
-        set $upstream $dashboard_container:$dashboard_port;
+        proxy_set_header Host $host;
+        proxy_set_header X-VerifiedViaNginx yes;
+        set $upstream linkstack:$linkstack_port;
         proxy_pass http://$upstream;
     }
 
     location /auth {
         proxy_set_header X-Forwarded-Proto https;
         proxy_set_header X-Forwarded-Protocol https;
-        proxy_set_header Host $host_or_tunnel;
-        set $upstream $auth_container:$auth_port;
+        proxy_set_header Host $host;
+        set $upstream auth:$auth_port;
         proxy_pass http://$upstream;
     }
 
     location /v2 {
         client_max_body_size 1G;
-        set $upstream $docker_registry_container:$docker_registry_port;
+        set $upstream docker-registry:$docker_registry_port;
         proxy_pass http://$upstream;
     }
 
     location /docs {
-    	set $upstream $documentation_container:$documentation_port;
+    	set $upstream documentation:$documentation_port;
     	proxy_pass http://$upstream;
     }
 
@@ -159,40 +132,39 @@ server {
     location /gitlab {
         proxy_set_header X-Forwarded-Proto https;
         proxy_set_header X-Forwarded-Protocol https;
-        proxy_set_header Host $host_or_tunnel;
         client_max_body_size 100M;
-        set $upstream $gitlab_container:$gitlab_port;
+        set $upstream gitlab:$gitlab_port;
         proxy_pass http://$upstream;
     }
 
     location /music {
-    	set $upstream $music_container:$music_port;
+    	set $upstream music:$music_port;
         proxy_pass http://$upstream;
     }
 
     location /music-downloader {
-    	set $upstream $music_downloader_container:$music_downloader_port;
+    	set $upstream music-downloader:$music_downloader_port;
         proxy_pass http://$upstream;
     }
 
     location /portainer {
-        set $upstream $portainer_container:$portainer_port;
+        set $upstream portainer:$portainer_port;
         proxy_pass http://$upstream;
         rewrite /portainer/?(.*) /$1 break;
     }
 
     location /scoreboard {
-    	set $upstream $scoreboard_container:$scoreboard_port;
+    	set $upstream scoreboard:$scoreboard_port;
         proxy_pass http://$upstream;
     }
 
     location /sonar {
-    	set $upstream $sonarqube_container:$sonarqube_port;
+    	set $upstream sonarqube:$sonarqube_port;
         proxy_pass http://$upstream;
     }
 
     location /ssh {
-        set $upstream $ssh_container:$ssh_port;
+        set $upstream ssh:$ssh_port;
         proxy_pass http://$upstream;
         rewrite /ssh/?(.*) /$1 break;
         proxy_http_version 1.1;
@@ -203,8 +175,50 @@ server {
 
     location ~ ^/npm/?(.*)$ {
         proxy_set_header X-NginX-Proxy true;
-    	set $upstream $verdaccio_container:$verdaccio_port;
+    	set $upstream verdaccio:$verdaccio_port;
         proxy_pass http://$upstream/$1?$args;
         proxy_redirect off;
+    }
+}
+
+server {
+    set_by_lua_block $auth_realm { return os.getenv("AUTH_REALM") }
+
+    set_by_lua_block $dashboard_domain { return os.getenv("DASHBOARD_DOMAIN") }
+    set_by_lua_block $dashboard_port { return os.getenv("DASHBOARD_PORT") }
+
+    set_by_lua_block $domain { return os.getenv("DOMAIN") }
+
+    set_by_lua_block $nginx_auth_client_id { return os.getenv("NGINX_AUTH_CLIENT_ID") }
+    set_by_lua_block $nginx_auth_client_secret { return os.getenv("NGINX_AUTH_CLIENT_SECRET") }
+
+    listen 443 ssl http2;
+    listen [::]:443 ssl http2;
+    server_name just-dashy.konratts.de;
+
+    access_by_lua_block {
+        local opts = {
+            redirect_uri_path = "/callback-auth",
+            accept_none_alg = true,
+            discovery = "https://" .. ngx.var.domain .. "/auth/realms/" .. ngx.var.auth_realm .. "/.well-known/openid-configuration",
+            client_id = ngx.var.nginx_auth_client_id,
+            client_secret = ngx.var.nginx_auth_client_secret,
+            logout_path = "/logout",
+            redirect_after_logout_uri = "https://" .. ngx.var.domain .. "/auth/realms/" .. ngx.var.auth_realm .. "/protocol/openid-connect/logout",
+            session_contents = { id_token = true },
+            ssl_verify = "no"
+        }
+
+        local res, err, url, session = require("resty.openidc").authenticate(opts)
+        if err then
+            ngx.status = 403
+            ngx.say(err)
+            ngx.exit(ngx.HTTP_FORBIDDEN)
+        end
+    }
+
+    location / {
+        set $upstream dashboard:$dashboard_port;
+        proxy_pass http://$upstream;
     }
 }
