--- a/package.json
+++ b/package.json
@@ -118,7 +118,7 @@
         "trpc-openapi": "^1.2.0",
         "tslib": "^2.3.0",
         "usehooks-ts": "^2.9.1",
-        "vitepress-plugin-mermaid": "^2.0.10",
+        "vitepress-plugin-mermaid": "2.0.10",
         "vue": "^3.3.4",
         "zod": "^3.21.4"
     }
