--- a/apps/server/nginx/conf/default.conf
+++ b/apps/server/nginx/conf/default.conf
@@ -57,7 +57,7 @@ server {
     server_name justin.konratts.de;
 
     access_by_lua_block {
-        if ngx.re.find(ngx.var.request_uri, "^/(documentation|music|music-downloader|callback-auth)") and not ngx.re.find(ngx.var.request_uri, "^/(music/rest)") then
+        if ngx.re.find(ngx.var.request_uri, "^/(documentation|music|music-downloader|callback-auth|logout)") and not ngx.re.find(ngx.var.request_uri, "^/(music/rest)") then
             local opts = {
                 redirect_uri_path = "/callback-auth",
                 accept_none_alg = true,
@@ -91,7 +91,7 @@ server {
     location /auth {
         proxy_set_header X-Forwarded-Proto https;
         proxy_set_header X-Forwarded-Protocol https;
-        proxy_set_header Host $host;
+        proxy_set_header Host justin.konratts.de;
         set $upstream auth:$auth_port;
         proxy_pass http://$upstream;
     }
@@ -132,6 +132,7 @@ server {
     location /gitlab {
         proxy_set_header X-Forwarded-Proto https;
         proxy_set_header X-Forwarded-Protocol https;
+        proxy_set_header Host $host;
         client_max_body_size 100M;
         set $upstream gitlab:$gitlab_port;
         proxy_pass http://$upstream;
@@ -219,6 +220,47 @@ server {
 
     location / {
         set $upstream dashboard:$dashboard_port;
+        proxy_pass http://$upstream;
+    }
+}
+
+server {
+    set_by_lua_block $auth_realm { return os.getenv("AUTH_REALM") }
+
+    set_by_lua_block $doku_port { return os.getenv("DOKU_PORT") }
+
+    set_by_lua_block $domain { return os.getenv("DOMAIN") }
+
+    set_by_lua_block $nginx_auth_client_id { return os.getenv("NGINX_AUTH_CLIENT_ID") }
+    set_by_lua_block $nginx_auth_client_secret { return os.getenv("NGINX_AUTH_CLIENT_SECRET") }
+
+    listen 443 ssl http2;
+    listen [::]:443 ssl http2;
+    server_name just-doku.konratts.de;
+
+    access_by_lua_block {
+        local opts = {
+            redirect_uri_path = "/callback-auth",
+            accept_none_alg = true,
+            discovery = "https://" .. ngx.var.domain .. "/auth/realms/" .. ngx.var.auth_realm .. "/.well-known/openid-configuration",
+            client_id = ngx.var.nginx_auth_client_id,
+            client_secret = ngx.var.nginx_auth_client_secret,
+            logout_path = "/logout",
+            redirect_after_logout_uri = "https://" .. ngx.var.domain .. "/auth/realms/" .. ngx.var.auth_realm .. "/protocol/openid-connect/logout",
+            session_contents = { id_token = true },
+            ssl_verify = "no"
+        }
+
+        local res, err, url, session = require("resty.openidc").authenticate(opts)
+        if err then
+            ngx.status = 403
+            ngx.say(err)
+            ngx.exit(ngx.HTTP_FORBIDDEN)
+        end
+    }
+
+    location / {
+        set $upstream doku:$doku_port;
         proxy_pass http://$upstream;
     }
 }
