--- a/apps/server/nginx/envs.conf
+++ b/apps/server/nginx/envs.conf
@@ -13,6 +13,8 @@ env DOCKER_REGISTRY_PORT;
 env DOCUMENTATION_BASE;
 env DOCUMENTATION_PORT;
 
+env DOKU_PORT;
+
 env GITLAB_BASE;
 env GITLAB_PORT;
 
