--- a/apps/dashboard/docker-compose.yml
+++ b/apps/dashboard/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     container_name: dashboard
     ports:
       - 4000:80
-    restart: always
+    restart: unless-stopped
 
   dev:
     container_name: dashboard-dev
